--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
         "history": "^4.10.1",
         "node-sass": "^4.13.1",
         "prettier": "^1.19.1",
+        "rc-slider": "^9.2.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-paginate": "^6.3.2",
